--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    xmlns:android = "http://schemas.android.com/apk/res/android"
+    android:orientation = "vertical">
 
-    <!-- Layout for the View button -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,28 +19,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:onClick="changeView"
+            android:onClick="toggle"
             android:text="View"></Button>
 
         <Button
-            android:id="@+id/Clear"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:onClick="clearMarkers"
-            android:text="Clear" />
-
-        <Button
-            android:id="@+id/Track"
-            android:layout_width="wrap_content"
+            android:id="@+id/button2"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="trackMyLocation"
             android:text="Track" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="clearMarkers"
+            android:text="Clear" />
+
     </LinearLayout>
 
-    <!-- Layout for the Search -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,19 +47,22 @@
         android:weightSum="1">
 
         <EditText
-            android:layout_width="146dp"
-            android:layout_height="wrap_content"
             android:id="@+id/editText_addr"
-            android:layout_weight=".97" />
-
-        <Button
-            android:id="@+id/button_search"
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <Button
+            android:id="@+id/Search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:onClick="onSearch"
-            android:text="Search"></Button>
+            android:text="Search" />
+
     </LinearLayout>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
